# similarity_scoring

./: .gitignore  LICENSE  README.md  __init__.py  `  compute_metrics.py  compute_metrics_v2.py  config.py  defaults.py  pyproject.toml  run_similarity.py  sentencing_math.py  similarity_metrics.py  vector_similarity.py
evals/: README.md  eval_similarity_metrics.py  spearman_summary.csv  topk_overlap_summary.csv
similarity_scoring/: __init__.py  compute_metrics.py  config.py  offense_helpers.py  run_similarity.py  sentencing_math.py  similarity_metrics.py  vector_similarity.py
